--- a/user/css/editable_language.css
+++ b/user/css/editable_language.css
@@ -1,7 +1,7 @@
 
 .infoPerson{
-	//position: relative;
-	width: 70%; min-width: 450px;
+	position: relative;
+	width: 70%; min-width: 350px;
 	height: 20%; min-height: 250px;
 	padding: 10px;
 	display: block;
@@ -19,15 +19,20 @@ fieldset p{
 	font-size: 14px;
 
 }
-.video{position: relative;
-	width: 90%; margin: 0 auto;}
-.demo{//position: absolute;
+.video{
+	position: relative;
+	width: 98%; 
+	margin: 0 auto;
+	}
+.demo{
+	position: relative;
 	top:0;
 	display: inline-block;
 	border:1px solid #333;
 	width: 300px;
 	height: 250px;
-	text-align: center;
+	//text-align: center;
+	
 }
 
 .textBox{
