--- a/_css_/styles_contenu.css
+++ b/_css_/styles_contenu.css
@@ -1,7 +1,7 @@
 /* -------------------- CONTENU ---------------------- */
 
 #contenu{position: absolute; top:70px; 
-	width: 85%; right:0; max-width: 85%; min-width: 640px; 
+	width: 100%; right:0; max-width: 1100px; min-width: 640px; 
 	margin: 0 auto; 
 	//box-shadow: 0px 0px 1px #000;
 	//border:1px solid #000;
