--- a/nko/css/titre_lesson.css
+++ b/nko/css/titre_lesson.css
@@ -7,24 +7,41 @@ body{
 
 /* Les titres du contenu */
 #hautTitreH1{margin:5px;}
-#titre ul{
-	border: 3px solid rgb(50,100,150);
-}
+/*  ***** CSS OF THE CONTENT MENU ***** */ 
+/* ----for main title---- */
 .titreH1{
 	color: rgb(200,200,200);
-	border: 3px solid rgb(50,100,150);
 	position: relative;
 	cursor: cell;
-	background: rgb(50,100,150);
-	color: rgb(220,220,220);
 	font-size: 18px;
 	margin: 0 auto;
 	text-align: center;
 	padding: 5px;
-	//font-style: inherit;
 }
-.titreH1>a{color: rgb(220,220,220);}
+
+/* --- For level_in and level_off--- */
+
+/* H1 STYLE */
+.titreH1_in{
+	border: 3px solid rgb(50,100,150);
+	background: rgb(50,100,150);
+}
+.titreH1_off{
+	border: 3px solid rgb(100,100,100);
+	background: rgb(100,100,100);
+}
+
+/* UL STYLE */
+.lesTitres_in{
+	border: 3px solid rgb(50,100,150);
+}
+.lesTitres_off{
+	border: 3px solid rgb(100,100,100);	
+}
+
 /* ----- lesTitres ----- */
+.titreH1>a{color: rgb(220,220,220);}
+
 .lesTitres li{
 	padding: 3px;
 	list-style-type: none;
@@ -40,14 +57,22 @@ body{
 
 
 /* ----- lesTitres ----- */
-.lesLiens{padding: 10px;}
 .lesLiens li{
 	list-style-type: none;
 	line-height: 100%;
 	font-size: 18px;
 }
+
+.lesson_pass{
+	background: rgb(35,115,115);
+}
+.lesson_in{
+	background: rgb(35,70,115);
+}
+.lesson_off{
+	background: rgb(120,120,120);
+}
+
 .lesLiens li.active a{color: rgb(250,250,100);}
 .lesLiens a{text-decoration: none; color: rgb(220,220,220);}
 .lesLiens a:hover{color: rgb(20,20,20);}
-
-
