--- a/_css_/styles_contenu_para.css
+++ b/_css_/styles_contenu_para.css
@@ -7,12 +7,14 @@
 		font-size: 20px; color: rgb(220,50,50);
 		padding: 0; text-align: center;
 		left: 37.5%;
+		//border: 1px solid #000;
 	}
 
 	#paraTexte{position: absolute; top: 40px; 
 		width: 95%; max-width:100%; //min-width: 470px; 
-		height: 100%;
-		//box-shadow: 0 0 2px #999;background: rgb(220,220,220);}
+		border: 1px solid #000;
+		//box-shadow: 0 0 2px #999;
+		background: rgb(220,220,220);}
 		#listDmalon li{list-style-type: disc;}
 		#listDmalon a{text-decoration: none;}
 
@@ -25,19 +27,23 @@
 			text-indent: inherit;
 			//border:1px solid #000;
 			text-align: justify;
-			margin: 5px; padding: 5px; 
-
+			margin: 0; padding: 5px; 
+			background: rgb(220,220,220);
+			
 		}
 
 		#intro li{margin: 5px; padding: 0;}
-		#intro a{margin: 0; padding: 0;}
+		#intro a{
+			font-size: 24px;
+			margin: 0; padding: 0;
+			color: rgb(100, 100, 100);
+			}
 		#intro p{line-height: 150%;}
 
 		.def{
-			font-family: Geneva;
+			font-family: Geneva; Ebrima;
 			font-size: 20px;
 			line-height: 100%;
-			font-style: italic; 
 		}
 
 		.contact_us{text-align: right;}
