--- a/_css_/styles_contenu.css
+++ b/_css_/styles_contenu.css
@@ -2,11 +2,11 @@
 
 #contenu{position: absolute; top:70px; 
 	//width: 100%; right:0; max-width: 1100px; min-width: 640px; 
-	width: 640px; right:0; max-width: 1100px; min-width: 480px; 
+	width: 480px;  max-width: 1100px; min-width: 480px; 
+	right:0;
 	margin: 0 auto; 
 	//box-shadow: 0px 0px 1px #000;
 	//border:1px solid #000;
-	height:100%; 
 	} 
 	.rectangle{border-radius: 0 10px 0 10px;}
 
@@ -18,8 +18,8 @@
 		padding: 0; text-align: center;
 	}
 
-	#paraTexte{position: absolute; top: 40px; width: 100%; max-width:100%; min-width: 470px; 
-		height: 90%;
+	#paraTexte{position: absolute; top: 40px; 
+		width: 100%; max-width:100%; min-width: 470px; 
 		box-shadow: 0 0 2px #999;}
 		#listDmalon li{list-style-type: disc;}
 		#listDmalon a{text-decoration: none;}
