--- a/_css_/styles_contenu_full.css
+++ b/_css_/styles_contenu_full.css
@@ -1,13 +1,12 @@
 body{background: rgb(220,220,220);}
 .contenu{position: absolute; top:70px; 
-	width: 85%; right:0; max-width: 85%; min-width: 640px; 
+	width: 75%; right:0; max-width: 85%; min-width: 480px; 
 	margin: 0 auto;
 	//border:1px solid #000;
-	height:100%;
 	} 
-	.videoIntro{width:90%; height:75%;
+	/*.videoIntro{width:90%; height:75%;
 	margin: 2% 5% 4% 5%;
-	}
+	}*/
 
 
 
