--- a/nko/_css_/titre_lesson.css
+++ b/nko/_css_/titre_lesson.css
@@ -76,3 +76,16 @@ body{
 .lesLiens li.active a{color: rgb(250,250,100);}
 .lesLiens a{text-decoration: none; color: rgb(220,220,220);}
 .lesLiens a:hover{color: rgb(20,20,20);}
+
+#videoPlace{
+	margin: 0 auto;
+	border: 1px solid #000;
+	width: 90%; max-width:95%; min-width: 640px;
+	height: 480px; max-height:100%; min-height: 390px;
+}
+
+iframe{
+	width:100%; min-width:480px; 
+	height:480px; min-height: 390px; 
+}
+
