--- a/_css_/styles_contenu_titre.css
+++ b/_css_/styles_contenu_titre.css
@@ -1,8 +1,9 @@
 
 #titre{position: fixed; top: 72px; left: 0; 
 	width: 200px;  /*max-width: 200px; min-width: 200px;*/ 
-	height: 100%; box-shadow: 0 0 5px #999;
+	height: 100%; 
 	background: rgb(70,70,70);
+	z-index: 0;
 }
 
 /* Les titres du contenu */
@@ -10,7 +11,6 @@
 #titre h1{
 	font-size: 20px;
 	text-align: center;
-	//padding: 10px;
 	margin: 5px 0 0 0;
 }
 
@@ -21,7 +21,6 @@
 .h1Liens{color: rgb(220,220,220);}
 #titre ul{
 	//border: 3px solid rgb(50,100,150);
-	//position: absolute;
 	margin: 0 auto;
 	padding: 0;
 }
