--- a/_css_/styles_subtitle.css
+++ b/_css_/styles_subtitle.css
@@ -1,10 +1,7 @@
-/* --------------- STYLE CSS FASSO BARABA ---------------- */
-
-/* Menu Lonko  */
-	
+/* subtitle  */
 	#menuContenu{position: absolute; 
 		width: 80%; max-width: 80%; min-width: 420px; height:40px; 
-		top:30px; left:0; padding: 6px;
+		top:30px; left:30px; padding: 6px;
 		//border:1px solid #000; 
 		margin: 0 auto; display: block;
 		z-index: 2;
@@ -14,13 +11,13 @@
 
 	#subMenu{position:absolute; 
 		list-style-type:none; 
-		margin:0 auto; padding: 6px 5px 0 5px; right: 5%;
+		margin:0 auto; padding: 6px 5px 0 5px; right: 0;
 		//border:1px solid #000; 
 		width:100%; max-width: 100%; min-width: 380px; 
 		height:34px; text-align:center; 
 		font-weight: bold;
 		}
-	#subMenu li {display:inline-block;}
+	#subMenu li {display:inline-block;right: 0;}
 	
 	#subMenu li a {display:block; padding:0 5px; height:25px; line-height:20px; font-size:18px;
 		color:rgb(200,200,200); margin:5px;}
