--- a/_css_/styles_contenu_titre.css
+++ b/_css_/styles_contenu_titre.css
@@ -14,6 +14,13 @@
 	margin: 5px 0 0 0;
 }
 
+#titre .sub_titreH1{
+	font-size: 20px;
+	text-align: center;
+	margin: 1px 0 0 0;
+}
+
+
 #hautTitreH1{
 	color: rgb(100,100,100);
 	cursor: default;
