--- a/nko/_css_/titre_lesson.css
+++ b/nko/_css_/titre_lesson.css
@@ -117,13 +117,24 @@ body{
 .lesLiens a{text-decoration: none; color: rgb(220,220,220);}
 .lesLiens a:hover{color: rgb(20,20,20);}
 
+/* ****************** STYLE of VIEDO PLACE *************** */
 #videoPlace{
 	margin: 0 auto;
-	border: 1px solid #000;
+	border: 1px solid #eee;
 	width: 90%; max-width:95%; min-width: 640px;
 	height: 480px; max-height:100%; min-height: 390px;
 }
 
+#movie_title{
+	text-align: center; 
+	margin:0 auto;
+	padding: 5px;
+	font-size: 20px;
+	}
+#comment_title{
+	font-size: 16px;
+	color:#555;
+}
 iframe{
 	width:100%; min-width:480px; 
 	height:480px; min-height: 390px; 
