--- a/nko/_css_/titre_lesson.css
+++ b/nko/_css_/titre_lesson.css
@@ -1,8 +1,8 @@
 html{
-	font-family : Ebrima;
+	font-family : ebrima;
 }
 body{
-	font-family : Ebrima;
+	font-family : ebrima;
 }
 
 /* Les titres du contenu */
