--- a/user/css/regist.css
+++ b/user/css/regist.css
@@ -1,9 +1,26 @@
+
+/* ad ebrima font hosting in local server */
+@font-face {
+    font-family: "ebrima";
+    src: url('http://www.fasso.org/font/ebrima.ttf');
+}
+@font-face {
+    font-family: "ebrima";
+    font-style: italic;
+    src: url('http://www.fasso.org/font/ebrima.ttf');
+}
+@font-face {
+    font-family: "ebrimabd";
+    font-weight: bold;
+    src: url('http://www.fasso.org/font/ebrimabd.ttf');
+}
+
 html{
-	font-family: Ebrima;
+	font-family: ebrima;
 }
 
 body{
-	font-family: Ebrima;
+	font-family: ebrima;
 	position: relative;
 	text-align: center;
 	background: #e2e2e2;
@@ -105,13 +122,13 @@ td{padding: 5px;}
 	//margin: 2px;
 }
 
-.checkbox{font-family: Ebrima; font-size: 13px;}
+.checkbox{font-family: ebrima; font-size: 13px;}
 
-#langues_selected{font-size: 14px; padding:2px; font-family: Ebrima;}
+#langues_selected{font-size: 14px; padding:2px; font-family: ebrima;}
 .langue{font-size: 14px; padding:5px;}
 #soumettre{
 	font-size: 16px;
 	margin-bottom: 5px;
-	font-family: Ebrima;
+	font-family: ebrima;
 
 }
