--- a/user/css/styles_cours.css
+++ b/user/css/styles_cours.css
@@ -1,8 +1,8 @@
 /* --------------- STYLE CSS FASSO BARABA ---------------- */
-html{font-size:100%; font-family: Ebrima;}
+html{font-size:100%; font-family: ebrima;}
 body{margin:0px; 
 	padding:0px; background:#e2e2e2; 
-	font-family: Ebrima; font-size:13; 
+	font-family: ebrima; font-size:13; 
 	color: #la1718;
 	 line-height:1;}
 header, nav, aside, footer, figure, section, article{display: block;}
@@ -13,7 +13,7 @@ header, nav, aside, footer, figure, section, article{display: block;}
 
 	.loged_in{position: absolute; 
 		font-size: 18px; font-weight: bold;
-		font-family: Ebrima; Tahoma; 
+		font-family: ebrima; Tahoma; 
 		background: rgb(150,150,150); 
 		padding-top: 0;  padding-bottom: 21.5px; 
 		padding-left: 15px; padding-right: 15px;
@@ -49,7 +49,7 @@ header{height:70px; position:fixed; margin: 0 auto; top:0;
 	
 	#recherche{position:absolute; top:41px; right:0; width: 25%; display: inline;}
 	
-	#recherche input[type="text"] {position: absolute; padding:5px; font-family: Ebrima; 
+	#recherche input[type="text"] {position: absolute; padding:5px; font-family: ebrima; 
 		font-size:14px; font-style:italic; text-align:center;
 		color:#848484; border:1px solid #dedede; left: 0;
 		width:80px; height: 20px; margin: -2px 0 4px 0;
@@ -143,7 +143,7 @@ header{height:70px; position:fixed; margin: 0 auto; top:0;
 			position: absolute;
 			width: 95%;
 			line-height: 120%;
-			font-family: Geneva, Ebrima, dejaVu;
+			font-family: Geneva, ebrima, dejaVu;
 			font-size: 18px;
 			text-indent: inherit;
 			//border:1px solid #000;
