Major update in nko 'nqo_db' and add new courses

--- a/user/css/styles_profile.css
+++ b/user/css/styles_profile.css
@@ -3,6 +3,9 @@ html{font-family: ebrima;}
 
 body{font-family: ebrima;}
 
+#paraTitre h1{
+	position: absolute;  top: 13px;
+}
 .image_profile{
 	margin: 5px;
 }
